# OctoShell

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  ai.rs  approval.rs  lib.rs  main.rs  pty.rs
src/agents/: providers.ts
src/ai/: AiClient.ts  AiSidebar.tsx  actions.ts
src/blocks/: AgentBlock.tsx  CodeBlock.tsx  Feed.tsx  InputBar.tsx  Markdown.tsx  TerminalBlock.tsx
src/chrome/: Titlebar.tsx
src/macros/: MacroBar.tsx  SmartPrButton.tsx
src/projects/: CablesRail.tsx  ProjectSidebar.tsx
src/shell/: ShellController.ts  completion.ts  useShell.ts
src/util/: ansi.ts  highlight.ts  notify.ts  persist.ts
